# amd-merolav

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  VLLM_SETUP.md  __main__.py  benchmark.ps1  create_droplet.ps1  cuda-helloworld.ipynb  docker-compose.yml  implementation_plan_custom_executor.md  launch.ps1  pyproject.toml  requirements.txt  run_on_gpu.ps1  serve.sh  setup_gpu.sh  test_ag2_direct.py  test_openai_client.py  test_planner.ps1
.github/workflows/: release.yml  test.yml
.hypothesis/constants/: 03b99992ed7c0f1b  08da4643d0b7084a  0d7634d2e79a0941  0da59ea86dc339c7  0f45005170c008f4  0fef03b8ece66c7d  11a6a706c86e74d8  12cc3ef042681854  18357796cc08539e  2556b71ca49d7590  259cea39cf3181b1  28eae1682a520689  2c51941f37b4c173  2ceb32442bf665b2  2ec0a4ed6b72e8b7  3f5a157ff97a6400  40e5f2fa6b249550  41f7e54149df9ab8  440404f182a5daf9  4ccd727ea5ed113c  4e31a45ade5e36e6  521529f909aef2db  6e286e5d20e46b28  7041ccb897c38a1a  7139d2528ecb84c2  742b28e9f3f536cf  75a8ba28fccc02db  77e408393509892e  78290eaccfc008ad  7b6ea4a09de0ca0c  81b10e0bb0715768  85149eb3ee37283a  89025db728da73b9  9a118e4b0c787fdc  b0dc8db9e51003fc  ba873319b72a6d0f  c280c4664bfc73da  c5f7cfc1220db9be  cd57e0c5a57c2494  ceadeb3b7b22a596  (+9 more)
.rocm_cache/: manifest.json
agents/: coder.py  orchestrator.py  planner.py  reviewer.py  tester.py
cli/: main.py
cocoa_amini_finetuning/: README.md  config_dinov2.yaml  config_eva02.yaml  eval.py  prepare_amini_data.py  publish.sh  run_mi300x.sh  setup_rocm.sh  stage_amini_dataset.sh  train.py
cocoa_eva02_finetuning/: README.md  config.yaml  eval.py  prepare_cocoa_data.py  requirements.txt  run_mi300x.sh  setup_rocm.sh  stage_cocoa_dataset.sh  train.py
config/: model_profiles.py  oai_config_list.json  settings.py
core/: analyzer.py  audit.py  cache.py  chunker.py  context_budget.py  cuda_c_migrator.py  differ.py  file_io.py  import_graph.py  logging.py  migrator.py  project_migrator.py  quality.py
demo/: demo_complex.py  demo_input.py  notebook_extracted.py
knowledge/: cuda_c_map.py  cuda_rocm_map.py  library_map.py  optimizations.py  torch_cuda_map.py
social/: post1_building_agent.md  post2_amd_cloud_feedback.md  post3_benchmark_results.md  post4_v020_update.md  post5_custom_executor.md
submission/: demo_video_script.md  devpost_submission.md  slide_deck.md
testing/: equivalence.py  mock_hip.py  runner.py  validators.py
tests/: conftest.py  test_agent_interactions.py  test_agents.py  test_analyzer.py  test_analyzer_edge_cases.py  test_audit.py  test_cache.py  test_cuda_c_migrator.py  test_e2e.py  test_knowledge.py  test_knowledge_expanded.py  test_migrator.py  test_migrator_properties.py  test_quality.py  test_regression.py  test_validation_improvements.py  test_validators.py
tests/fixtures/: sample_cuda_conditional.py  sample_cuda_kernel_string.py  sample_cuda_large.py  sample_cuda_multi_gpu.py  sample_cuda_pycuda.py  sample_cuda_simple.py  sample_partially_migrated.py
track2_finetuning/: .gitignore  README.md  RESULTS.md  benchmark.py  config.yaml  eval.py  prepare_data.py  publish.sh  requirements.txt  rewrap_ckpt.py  run_mi300x.sh  setup_rocm.sh  splits.json  stage_dataset.sh  train.py  upload_extras.py
vision/: app.py  config.yaml  finetune_vlm.py  publish_vlm.sh  requirements.txt
vision/data/: create_qa_dataset.py  treatment_knowledge.json
vision/data/qa_dataset/: train.jsonl  val.jsonl
